# csat

./: AUTHORS  CREDITS  Makefile  README
Hevelius/: svn-commit.2.tmp  svn-commit.3.tmp  svn-commit.tmp
Hevelius/idl/: CSATStatus.idl  Telescope.idl
Hevelius/include/: lpiFrameDevIO.h
Hevelius/others/: Todo  copy.sh  link
Hevelius/others/telescopio_opengl/tam/src/: Makefile  Makefile.am  Makefile.in  app.h  controls.c  controls.h  coord.c  glcallbacks.h  globject.h  interface.c  interface.h  main.c  threeaxis
Hevelius/others/telescopio_opengl/tam/src/.deps/: callbacks.Po  controls.Po  coord.Po  glcallbacks.Po  globject.Po  interface.Po  main.Po  model.Po  support.Po
Hevelius/src/: HeveliusTCS  Makefile  NexstarAltDevIO.cpp
Hevelius/src/ent1_ejecs/ejec_p3/: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  configure.in  coord.h  glcallbacks.c  interface.c  model.h  threeaxis.dev  threeaxis.glade
Hevelius/src/ent1_ejecs/ejec_p3/.deps/: callbacks.Po  controls.Po  interface.Po  main.Po  support.Po
Hevelius/src/ent1_ejecs/ejec_p3/autom4te.cache/: traces.0t
Hevelius/src/ent1_ejecs/ejec_p3/src/: callbacks.c  callbacks.h  controls.c  coord.c  glcallbacks.c  globject.c  interface.c  main.c  model.c  support.c  threeaxis
Hevelius/src/ent1_ejecs/ejec_p3/src/.deps/: callbacks.Po  glcallbacks.Po  interface.Po  main.Po  model.Po  support.Po
PointingModel/include/: Model.h  Obs.h  ObsList.h  Pointing.h  Term.h
PointingModel/src/: Makefile  Model.cpp  Obs.cpp  ObsList.cpp  Pointing.cpp  Term.cpp
amTCS/idl/: CCD.idl  CSATStatus.idl  CSATStatus.midl  Calculations.idl  DevCCD.idl  DevGPS.idl  DevTelescope.idl  Locale.idl  Pointing.idl  Telescope.idl  Tracking.idl  Types.idl  csatErrors.xml
amTCS/include/: CalculationsImpl.h  DevTelescopeImpl.h  JDCalculationsTest.h  NexsimAltDevIO.h  NexsimAzmDevIO.h  NexsimCoordDevIO.h  NexsimImpl.h  NexsimVelDevIO.h  NexstarAltDevIO.h  NexstarAzmDevIO.h  NexstarCoordDevIO.h  NexstarImpl.h  NexstarVelDevIO.h  SerialRS232.h  lpiFrameDevIO.h  lpiImageDevIO.h  lpiImpl.h
amTCS/src/: CalculationsImpl.cpp  DevTelescopeImpl.cpp  HeveliusTCS  Makefile  NexsimAltDevIO.cpp  NexsimAzmDevIO.cpp  NexsimCoordDevIO.cpp  NexsimImpl.cpp  NexsimVelDevIO.cpp  NexstarAltDevIO.cpp  NexstarAzmDevIO.cpp  NexstarCoordDevIO.cpp  NexstarImpl.cpp  NexstarVelDevIO.cpp  SerialRS232.cpp  eTrexImpl.cpp  lpiFrameDevIO.cpp  lpiImageDevIO.cpp  lpiImpl.cpp
amTCS/test/: Makefile  (+13 more)
lpiRQ/: bayer.c  camararq.c  ccd.c  ccd.h
lpiRQ/lpiGui/src/: Makefile  Makefile.am  Makefile.in  bayer.c  bayer.h  callbacks.c  callbacks.h  ccd.c  ccd.h  interface.c  interface.h  main.c  sonix_compress.c  sonix_compress.h
lpiRQ/lpiGui/src/lpi-gui-src/: Makefile.in  configure.in
lpiRQ/lpiGui/src/lpi-gui-src/autom4te.cache/: traces.1
lpiRQ/lpiGui/src/lpi-gui-src/src/: bayer.c  interface.c
lpiRQ/lpiGui/src/src/: ccd.c
pointingClient/: calClient.glade  main.py
telecli/: README
telesim/: Makefile  listener.c  listener.h  main.c  telescope.c  telescope.h
(+1140 files in other folders)
