dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(threeaxis, 1.0.1)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

pkg_modules="gtk+-2.0 >= 2.0.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

dnl Link with math library
LIBS="$LIBS -lm"

dnl Check for GL
AC_CHECK_HEADERS(GL/gl.h,,AC_MSG_ERROR([[No gl.h found.]]))
LIBS="$LIBS -lGL"
AC_CHECK_LIB(GL,glNewList)
if test "x$ac_cv_lib_GL_glNewList" = "xno" ; then
   dnl Check for MesaGL.
   AC_CHECK_LIB(MesaGL, glNewList,,
                AC_MSG_ERROR(GL library was not found))
fi
 
dnl Check for GLU.
AC_CHECK_HEADERS(GL/glu.h,,AC_MSG_ERROR([[No glu.h found.]]))
AC_CHECK_LIB(GLU,gluLookAt)
 
if test "x$ac_cv_lib_GLU_gluLookAt" = "xno"; then
   dnl Check for MesaGLU.
   AC_CHECK_LIB(MesaGLU, gluLookAt,,
                AC_MSG_ERROR(GLU library was not found))
fi
 
dnl Check for GLUT headers first.
AC_CHECK_HEADERS(GL/glut.h,,AC_MSG_ERROR([[No glut.h found.  See INSTALL file for details on correcting this problem.]]))

dnl Check for GLUT.
AC_CHECK_LIB(glut, glutKeyboardUpFunc,,
AC_MSG_ERROR(GLUT library version >= 3.7 not found))
AM_CONDITIONAL(ENABLE_GLUT, test "yes" = "yes")

dnl stuff for gtkglext
PKG_CHECK_MODULES(GTKGL, gtkglext-1.0)
CPPFLAGS="$CPPFLAGS $GTKGL_CFLAGS"
LIBS="$LIBS $GTKGL_LIBS"

AC_OUTPUT([
Makefile
src/Makefile
])

